# carbonic

./: .gitignore  CHANGELOG.md  CLAUDE.md  ROADMAP.md  clean-build.sh  main.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  test.yml
1.0/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/api/: index.html
1.0.0/api/carbonic/: index.html
1.0.0/api/date/: index.html
1.0.0/api/datetime/: index.html
1.0.0/api/duration/: index.html
1.0.0/api/exceptions/: index.html
1.0.0/api/interval/: index.html
1.0.0/api/locale/: index.html
1.0.0/api/period/: index.html
1.0.0/guide/date/: index.html
1.0.0/search/: search_index.json
1.0/api/: index.html
1.x/: 404.html  index.html  sitemap.xml
1.x/api/: index.html
1.x/assets/: extra.js
1.x/overrides/: main.html
carbonic/: __init__.py
carbonic-polars/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  demo.py  pyproject.toml  test_real_functions.py
carbonic-polars/carbonic_polars/: __init__.py
carbonic-polars/src/: business_days.rs  expressions.rs  formatting.rs  lib.rs  parsing.rs  utils.rs
carbonic-polars/tests/: test_basic.py  test_carbonic_polars.py
carbonic/core/: date.py  datetime.py  duration.py  exceptions.py  interval.py  period.py
carbonic/integrations/: polars.py  pydantic_old.py
carbonic/locale/: __init__.py  en.py  pl.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/search/: search_index.json
docs/: index.md
docs/api/: carbonic.md  date.md  datetime.md  duration.md  exceptions.md  index.md  interval.md  locale.md  period.md
docs/assets/: extra.css
docs/development/: contributing.md
docs/examples/: common-tasks.md
docs/getting-started/: concepts.md  installation.md  migration.md  quickstart.md
docs/guide/: business-days.md  date.md  datetime.md  duration.md  interval.md  localization.md  parsing-formatting.md  period.md  pydantic.md  timezones.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/assets/: extra.css
site/search/: search_index.json
tests/: conftest.py  test_date.py  test_datetime.py  test_duration.py  test_integrations_polars.py  test_interval.py
(+98 files in other folders)
