[package]
name = "carbonic-polars"
version = "0.1.0"
edition = "2021"

[lib]
name = "carbonic_polars"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.42", features = ["lazy", "temporal", "strings"] }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# For localization support
once_cell = "1.19"

[profile.release]
lto = "thin"
strip = "symbols"