[project]
name = "carbonic-polars"
version = "0.1.0"
description = "High-performance Polars plugin providing Carbonic datetime functionality"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "polars>=0.20.0",
    "carbonic>=0.1.0",
]

[project.urls]
Repository = "https://github.com/marepilc/carbonic"
Issues = "https://github.com/marepilc/carbonic/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "carbonic_polars._internal"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]